Added data access layer

--- a/ExamApp.Web/appsettings.json
+++ b/ExamApp.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=shoiebs-acer\\sqlexpress;Initial Catalog=ExamApp;Persist Security info=True;User Id=sa;Password=005269;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
