--- a/ExamApp.DataAccess/ExamApp.DataAccess.csproj
+++ b/ExamApp.DataAccess/ExamApp.DataAccess.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExamApp.Domain\ExamApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
