--- a/ExamApp.Web/ExamApp.Web.csproj
+++ b/ExamApp.Web/ExamApp.Web.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,13 @@
   <ItemGroup>
     <!-- Files not to publish (note that the 'dist' subfolders are re-added below) -->
     <Content Remove="ClientApp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ExamApp.DataAccess\ExamApp.DataAccess.csproj" />
+    <ProjectReference Include="..\ExamApp.Domain\ExamApp.Domain.csproj" />
+    <ProjectReference Include="..\ExamApp.Repository\ExamApp.Repository.csproj" />
+    <ProjectReference Include="..\ExamApp.Service\ExamApp.Service.csproj" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
